# polylogue

./: --query-term  .coderabbit.yaml  .dockerignore  .envrc  .gitattributes  .gitconfig  .gitignore  .tokeignore  AGENTS.md  AGENTS.meta.md  ASYNC-ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_CONTAINER_IMPLEMENTATION.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Containerfile  FINALIZATION_STEPS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL_TESTING_PROTOCOL.md  MORNING_BRIEFING.md  POLYLOGUE_IDEMPOTENCY_REPORT.md  README.md  README.txt  SECURITY.md  TESTING.md  TESTING_COMPLETE.md  alembic.ini  baseline_pass_rates.txt  baseline_test_counts.txt  convert_gemini_chatlog.py  coverage_baseline.json  flake.nix  format_log.jq  gmd.py  gmd_config.py  gmd_settings.py  hatch_build.py  index.html  (+12 more)
.agent/: CONVENTIONS.md  DEVLOOP.md  README.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads-hooks/: post-checkout  post-merge  pre-commit  pre-push
.cache/: README.md
.circleci/: config.yml
.claude/: settings.json  setup.sh
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: CONTRIBUTING.md  GIT_WORKFLOW.md  SETUP.md  dependabot.yml  pull_request_template.md  release.yml
.local/: README.md
artifacts/: README.md
browser-extension/: README.md  eslint.config.js  manifest.json  package.json
chatmd/: commands.py  doctor.py  drive.py  drive_client.py  html.py  local_sync.py  options.py  util.py
contrib/: polylogue-hook  polylogued.service
demos/: README.md  generate.sh  generate_assets.py  seed_demo.py
devtools/: __init__.py  __main__.py  action_contract_report.py  affected_obligations.py  affordance_usage.py  archive_schema_fast_forward.py  archive_space_report.py  artifact_graph.py  authored_scenario_catalog.py  basic_usage_demo_check.py  bd_reimport_guard.py  bead_batch_show.py  beads_sync.py  benchmark_campaign.py  benchmark_campaigns.py  benchmark_catalog.py  benchmark_compare_nightly.py  benchmark_models.py  benchmark_regression_detect.py  benchmark_results.py  benchmark_scenario_catalog.py  build_package.py  build_topology_projection.py  campaign_report.py  census_provider_vocabulary.py  claim_vs_evidence.py  claim_vs_evidence_evidence.py  cli_boundary.py  cli_surface_audit.py  click_dispatch.py  codex_exec_child_census.py  command_catalog.py  continuity_replay.py  coordination_latency_probe.py  cost_reconciliation_probe.py  coverage_gate.py  daemon_live_benchmark.py  daemon_workload_probe.py  degraded_archive_proof.py  delivery_gate_status.py  (+162 more)
docs/: 2026-03-19-polylogue-architectural-anatomy-and-pathology-audit.md  2026-03-19-testing-research-across-sinity-repos.md  CLAUDE.md  CLI-FEATURE-MAP.md  COVERAGE_VERIFICATION.md  DB_PIVOT_PLAN.md  FINAL_TEST_REDESIGN_REPORT.md  FUTURE_WORK_PLAN.md  IMPROVEMENTS.md  PARAMETRIZATION_TARGETS.md  README.md  REMAINING_TASKS.md  STATUS.md  TEST_COVERAGE_SPRINT_REPORT.md  TEST_SUITE_REDESIGN_SUMMARY.md  TEST_UTILITIES.md  agent-forensics.md  agent-integration-reference.md  agent-manual.md  architecture-hotspots.md  architecture-spine.md  architecture.md  archive-backup.md  artifact-and-semantic-proof-commit-plan-2026-03-19.md  artifact-and-semantic-proof-program-2026-03-19.md  artifact-cohort-control-plane-program-2026-03-21.md  automation.md  backlog.md  beta_rollout.md  browser-capture.md  canonical-archive-platform-program-2026-03-19.md  cli-audit.md  cli-reference.md  cli_tips.md  cloud-agents.md  config.sample.jsonc  configuration.md  cost-model.md  daemon-threat-model.md  daemon.md  (+74 more)
examples/: analyze_patterns.py  cost_analysis.py  extract_knowledge.py
geminimd/: __init__.py  cli_common.py  commands.py  config.py  drive.py  html.py  options.py  render.py  ui.py  util.py
main/: index.html
nix/: agent-integration-module.nix  devshell.nix  devtools-wrapper.sh  hm-module.nix  module.nix  python-deps.nix
nixos-modules/: polylogue-sync.nix  polylogue.nix  sync.nix
packaging/: Containerfile
packaging/polylogue-hooks/: README.md  pyproject.toml
packaging/polylogue-hooks/src/polylogue_hooks/: __init__.py  cli.py
packaging/polylogue-mcp/: README.md  pyproject.toml
polylogue/: __init__.py  __main__.py  _sqlite_compat.py  archive_product_base.py  archive_product_builders.py  archive_product_entities.py  archive_product_governance_entities.py  archive_product_models.py  archive_product_payloads.py  archive_product_queries.py  archive_product_rollups.py  archive_product_session_entities.py  archive_product_summaries.py  archive_product_summary_entities.py  archive_product_support.py  archive_products.py  archive_resume.py  artifact_graph.py  artifacts.py  assets.py  async_facade.py  automation.py  automation_targets.json  branch_explorer.py  branching.py  cli.py  cli_common.py  commands.py  config.py  container.py  conversation.py  db.py  doctor.py  document_store.py  drive.py  drive_async.py  drive_client.py  drive_ingest.py  errors.py  export.py  (+65 more)
scripts/: agent_forensics.py  cost_accounting_demo.py  generate_assets.py  generate_screenshots.py  render-agents  render-cli-reference  render-quality-reference  seed_demo.py  update_goldens.py
systemd/: polylogued.service
tests/: __init__.py  conftest.py  conftest_witness.py  factories.py  helpers.py  test_analytics_cli.py  test_analytics_metrics.py  test_assets.py  test_async_backend.py  test_async_ingestion.py  test_async_repository.py  test_attachment_failures.py  test_attachment_routing.py  test_attachment_search.py  test_attachments_cli.py  test_audit_fixes.py  test_automation_snippets.py  test_backend_comparison.py  test_backend_core.py  test_backend_protocol.py  test_backend_sqlite.py  test_branch_and_search.py  test_branch_explorer_batching.py  test_branching.py  test_branching_pipeline.py  test_check.py  test_check_command_integration.py  test_claude_code_record.py  test_claude_semantic.py  test_cli.py  test_cli_analytics.py  test_cli_auth.py  test_cli_browse.py  test_cli_check.py  test_cli_commands.py  test_cli_commands_coverage.py  test_cli_common.py  test_cli_completions.py  test_cli_container.py  test_cli_editor.py  (+227 more)
(+6752 files in other folders)
