[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polylogue"
version = "0.1.0"
description = "Polylogue CLI for AI chat archives"
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "chatgpt", "claude", "conversation", "archive", "llm"]
authors = [{ name = "Sinity" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
  "google-auth-oauthlib",
  "google-api-python-client",
  "google-auth-httplib2",
  "httpx[http2]>=0.27.0,<1.0",
  "rich>=13.0.0",
  "textual>=0.47.0",
  "jinja2",
  "markdown-it-py",
  "pygments",
  "ijson",
  "sqlite-vec>=0.1.6",  # Self-contained vector search
  "questionary>=2.0.0",
  "click>=8.1.0,<9.0",
  "tenacity>=8.0.0",
  "dateparser>=1.1.0",
  "orjson>=3.9.0",
  "structlog>=24.1.0",
  "pydantic>=2.0,<3.0",
  "aiosqlite>=0.19.0",  # Async SQLite support
  "pydantic-settings",
  "glom>=24.7.0",  # Declarative data extraction
  "mcp>=1.0.0",  # Model Context Protocol SDK
  "pyyaml>=6.0",  # YAML output format
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "pytest-asyncio>=0.23.0",  # Async test support
  "pytest-xdist>=3.5.0",  # Parallel test execution
  "pytest-randomly>=3.0",  # Detect order-dependent tests; adds --randomly-seed
  "pytest-benchmark>=5.0",  # Microbenchmark suite (run with --benchmark-enable -p no:xdist)
  "coverage[toml]>=7.6",
  "hypothesis>=6.100",
  "hypothesis-jsonschema>=0.23.0",  # Generate test data from JSON schemas
  "genson>=1.2.0",  # Infer JSON schemas from samples
  "jsonschema>=4.0.0",  # Validate JSON against schemas
  "syrupy>=4.0",  # Snapshot testing — pytest plugin, .ambr files
  "pyte>=0.8.0",  # Terminal emulator for deterministic output snapshot tests
  "mutmut>=3.0.0",  # Mutation testing for coverage verification
  "mypy>=1.17,<1.18",
  "types-PyYAML>=6.0",  # yaml library stubs for mypy
  "ruff>=0.1.0",
  "pre-commit>=3.5.0",
]
ocr = [
  "pillow",
  "pytesseract",
]
fuzz = [
  "atheris>=2.3.0",  # Google's Python fuzzer
  "mutmut>=3.0.0",  # Mutation testing
]
tree-sitter = [
  "tree-sitter>=0.22.0",
  "tree-sitter-python>=0.21.0",
  "tree-sitter-javascript>=0.21.0",
  "tree-sitter-typescript>=0.21.0",
  "tree-sitter-rust>=0.21.0",
  "tree-sitter-go>=0.21.0",
  "tree-sitter-java>=0.21.0",
  "tree-sitter-c>=0.21.0",
  "tree-sitter-cpp>=0.22.0",
  "tree-sitter-bash>=0.21.0",
  "tree-sitter-html>=0.21.0",
  "tree-sitter-css>=0.21.0",
  "tree-sitter-json>=0.21.0",
  "tree-sitter-yaml>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/sinity/polylogue"
Repository = "https://github.com/sinity/polylogue"
Issues = "https://github.com/sinity/polylogue/issues"
Documentation = "https://github.com/sinity/polylogue#readme"

[project.scripts]
polylogue = "polylogue.cli:main"
devtools = "devtools.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["polylogue", "devtools"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
addopts = "-ra -n auto --benchmark-disable --benchmark-storage=file://./.cache/pytest-benchmark"
testpaths = ["tests"]
asyncio_mode = "auto"
cache_dir = ".cache/pytest"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (pipeline, CLI end-to-end)",
    "benchmark: marks benchmark tests (run with --benchmark-enable -p no:xdist -p no:randomly)",
    "scale(level): parametric scale marker (small/medium/large/stretch)",
    "machine_contract: marks root CLI JSON success/failure contract tests",
    "query_routing: marks query-first CLI routing and read-surface tests",
    "tui: marks Textual dashboard interaction tests",
    "chaos: marks ingestion hostility, interruption, and chronology tests",
    "live: marks operator-run live archive validation lanes",
]
filterwarnings = [
    "ignore::ResourceWarning",           # Unclosed sqlite3 connections in thread-local backend
    "ignore::DeprecationWarning:dateparser",  # dateparser strptime deprecation (external)
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",  # aiosqlite cleanup in xdist workers
]


[tool.coverage.run]
source = ["polylogue"]
branch = true
data_file = ".cache/coverage/.coverage"

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 83

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
cache_dir = ".cache/mypy"
plugins = []
# Files excluded from strict type checking. This is legacy debt from
# before the gate was restored (#188) — the list only shrinks. When
# cleaning a module, remove its entry and run `devtools verify` to
# confirm the gate still passes.
exclude = [
  "tests/",
  "polylogue/sources/providers/",
  "polylogue/archive_product_rollups\\.py$",
  "polylogue/archive_product_summaries\\.py$",
  "polylogue/archive_products\\.py$",
  "polylogue/cli/commands/generate\\.py$",
  "polylogue/cli/commands/products\\.py$",
  "polylogue/cli/commands/run\\.py$",
  "polylogue/cli/commands/schema\\.py$",
  "polylogue/cli/embed_runtime\\.py$",
  "polylogue/cli/embed_stats\\.py$",
  "polylogue/cli/filter_picker\\.py$",
  "polylogue/cli/qa_finalization\\.py$",
  "polylogue/cli/query\\.py$",
  "polylogue/cli/query_actions\\.py$",
  "polylogue/cli/query_output\\.py$",
  "polylogue/cli/query_semantic\\.py$",
  "polylogue/cli/query_stats\\.py$",
  "polylogue/cli/query_verbs\\.py$",
  "polylogue/cli/run_observers\\.py$",
  "polylogue/facade_archive\\.py$",
  "polylogue/facade_ingest\\.py$",
  "polylogue/facade_products\\.py$",
  "polylogue/lib/conversation_runtime\\.py$",
  "polylogue/lib/conversation_summary_runtime\\.py$",
  "polylogue/lib/filter_builder\\.py$",
  "polylogue/lib/message_model_runtime\\.py$",
  "polylogue/lib/projection_filter_mixin\\.py$",
  "polylogue/lib/projection_terminal_mixin\\.py$",
  "polylogue/lib/projection_transform_mixin\\.py$",
  "polylogue/lib/projections\\.py$",
  "polylogue/lib/provider_semantics\\.py$",
  "polylogue/lib/query_plan\\.py$",
  "polylogue/lib/query_plan_execution\\.py$",
  "polylogue/lib/query_retrieval_candidates\\.py$",
  "polylogue/lib/query_retrieval_search\\.py$",
  "polylogue/lib/query_runtime_filters\\.py$",
  "polylogue/lib/query_spec\\.py$",
  "polylogue/lib/raw_payload_sampling_extract\\.py$",
  "polylogue/lib/session_profile_models\\.py$",
  "polylogue/lib/threads\\.py$",
  "polylogue/lib/work_event_extraction\\.py$",
  "polylogue/mcp/server_maintenance_tools\\.py$",
  "polylogue/mcp/server_product_tools\\.py$",
  "polylogue/mcp/server_prompts\\.py$",
  "polylogue/operations/archive\\.py$",
  "polylogue/pipeline/prepare_enrichment\\.py$",
  "polylogue/pipeline/prepare_models\\.py$",
  "polylogue/pipeline/prepare_transform\\.py$",
  "polylogue/pipeline/prepare_transform_content\\.py$",
  "polylogue/pipeline/run_execution\\.py$",
  "polylogue/pipeline/run_finalization\\.py$",
  "polylogue/pipeline/run_stages\\.py$",
  "polylogue/pipeline/services/acquisition\\.py$",
  "polylogue/pipeline/services/acquisition_persistence\\.py$",
  "polylogue/pipeline/services/acquisition_streams\\.py$",
  "polylogue/pipeline/services/indexing\\.py$",
  "polylogue/pipeline/services/ingest_batch\\.py$",
  "polylogue/pipeline/services/ingest_worker\\.py$",
  "polylogue/pipeline/services/parsing_workflow\\.py$",
  "polylogue/pipeline/services/planning_backlog\\.py$",
  "polylogue/pipeline/services/planning_runtime\\.py$",
  "polylogue/pipeline/services/validation_flow\\.py$",
  "polylogue/products/registry\\.py$",
  "polylogue/protocols\\.py$",
  "polylogue/rendering/renderers/html\\.py$",
  "polylogue/scenarios/assertions\\.py$",
  "polylogue/scenarios/execution\\.py$",
  "polylogue/schemas/extraction\\.py$",
  "polylogue/schemas/generation_cluster_support\\.py$",
  "polylogue/schemas/generation_packages\\.py$",
  "polylogue/schemas/generation_provider_bundle\\.py$",
  "polylogue/schemas/generation_provider_bundle_packages\\.py$",
  "polylogue/schemas/operator_inference\\.py$",
  "polylogue/schemas/operator_models\\.py$",
  "polylogue/schemas/relational_inference_strings\\.py$",
  "polylogue/schemas/runtime_registry\\.py$",
  "polylogue/schemas/synthetic/core\\.py$",
  "polylogue/schemas/synthetic/relation_solver_runtime\\.py$",
  "polylogue/schemas/tooling_registry\\.py$",
  "polylogue/showcase/catalog_loader\\.py$",
  "polylogue/showcase/generators\\.py$",
  "polylogue/showcase/showcase_runner_support\\.py$",
  "polylogue/site/index_pages\\.py$",
  "polylogue/site/models\\.py$",
  "polylogue/site/publication_flow\\.py$",
  "polylogue/site/scan\\.py$",
  "polylogue/site/site_builder_pages\\.py$",
  "polylogue/sources/decoder_zip\\.py$",
  "polylogue/sources/decoders\\.py$",
  "polylogue/sources/dispatch\\.py$",
  "polylogue/sources/drive_source_client\\.py$",
  "polylogue/sources/emitter\\.py$",
  "polylogue/sources/parsers/base_support\\.py$",
  "polylogue/sources/parsers/chatgpt\\.py$",
  "polylogue/sources/parsers/claude_ai_parser\\.py$",
  "polylogue/sources/parsers/codex\\.py$",
  "polylogue/sources/parsers/drive\\.py$",
  "polylogue/sources/parsers/drive_support_blocks\\.py$",
  "polylogue/sources/parsers/drive_support_text\\.py$",
  "polylogue/sources/source_acquisition\\.py$",
  "polylogue/storage/action_event_rebuild_runtime\\.py$",
  "polylogue/storage/action_event_rows\\.py$",
  "polylogue/storage/action_event_status\\.py$",
  "polylogue/storage/backends/async_sqlite\\.py$",
  "polylogue/storage/backends/async_sqlite_archive\\.py$",
  "polylogue/storage/backends/async_sqlite_raw\\.py$",
  "polylogue/storage/backends/queries/conversations_identity\\.py$",
  "polylogue/storage/backends/queries/conversations_reads\\.py$",
  "polylogue/storage/backends/queries/message_query_reads\\.py$",
  "polylogue/storage/backends/queries/message_query_stats\\.py$",
  "polylogue/storage/backends/queries/raw_reads\\.py$",
  "polylogue/storage/backends/queries/raw_state\\.py$",
  "polylogue/storage/backends/queries/session_product_summary_queries\\.py$",
  "polylogue/storage/backends/queries/session_product_thread_queries\\.py$",
  "polylogue/storage/backends/queries/stats\\.py$",
  "polylogue/storage/backends/query_store_archive\\.py$",
  "polylogue/storage/backends/query_store_maintenance\\.py$",
  "polylogue/storage/backends/query_store_product_profiles\\.py$",
  "polylogue/storage/backends/query_store_product_timelines\\.py$",
  "polylogue/storage/backends/schema\\.py$",
  "polylogue/storage/embedding_stats\\.py$",
  "polylogue/storage/embedding_stats_support\\.py$",
  "polylogue/storage/fts_lifecycle\\.py$",
  "polylogue/storage/hydrators\\.py$",
  "polylogue/storage/repair\\.py$",
  "polylogue/storage/repository\\.py$",
  "polylogue/storage/repository_action_reads\\.py$",
  "polylogue/storage/repository_archive_conversations\\.py$",
  "polylogue/storage/repository_archive_queries\\.py$",
  "polylogue/storage/repository_archive_search\\.py$",
  "polylogue/storage/repository_archive_tree\\.py$",
  "polylogue/storage/repository_product_profile_reads\\.py$",
  "polylogue/storage/repository_product_summary_reads\\.py$",
  "polylogue/storage/repository_product_thread_reads\\.py$",
  "polylogue/storage/repository_product_timeline_reads\\.py$",
  "polylogue/storage/repository_raw\\.py$",
  "polylogue/storage/repository_vectors\\.py$",
  "polylogue/storage/repository_write_conversations\\.py$",
  "polylogue/storage/repository_write_metadata\\.py$",
  "polylogue/storage/repository_writes\\.py$",
  "polylogue/storage/search\\.py$",
  "polylogue/storage/search_providers/fts5\\.py$",
  "polylogue/storage/search_providers/hybrid\\.py$",
  "polylogue/storage/search_providers/sqlite_vec_embeddings\\.py$",
  "polylogue/storage/search_providers/sqlite_vec_queries\\.py$",
  "polylogue/storage/search_providers/sqlite_vec_runtime\\.py$",
  "polylogue/storage/search_query_support\\.py$",
  "polylogue/storage/session_product_profiles\\.py$",
  "polylogue/storage/session_product_rebuild\\.py$",
  "polylogue/storage/session_product_refresh\\.py$",
  "polylogue/storage/session_product_status\\.py$",
  "polylogue/storage/session_product_storage\\.py$",
  "polylogue/storage/session_product_threads\\.py$",
  "polylogue/storage/session_product_timeline_rows\\.py$",
  "polylogue/sync\\.py$",
  "polylogue/sync_bridge\\.py$",
  "polylogue/sync_conversation_queries\\.py$",
  "polylogue/sync_product_queries\\.py$",
  "polylogue/ui/__init__\\.py$",
  "polylogue/ui/facade\\.py$",
  "polylogue/ui/facade_rendering\\.py$",
]
files = [
  "polylogue",
]
ignore_missing_imports = true
disallow_subclassing_any = false  # Pydantic BaseModel seen as Any (plugin incompatible with nix mypy 1.17)
disallow_untyped_decorators = false  # Click decorators are inherently untyped

[[tool.mypy.overrides]]
module = "polylogue.sources.providers.*"
follow_imports = "skip"  # Provider parsers use dynamic role strings from JSON; exclude doesn't cover imports

[tool.ruff]
line-length = 120
target-version = "py310"
cache-dir = ".cache/ruff"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "E402",   # consolidated mega-files have mid-file section imports
    "N803",   # test parameter naming follows test conventions
    "N806",   # type alias naming in test helpers
    "SIM105", # try-except-pass in test error handling is intentional
    "SIM115", # NamedTemporaryFile(delete=False) pattern in benchmarks
    "SIM117", # nested with-statements with comments between context managers
]
"polylogue/sources/providers/**" = ["N815"]  # Pydantic alias fields match provider JSON schemas

[tool.ruff.lint.isort]
known-first-party = ["polylogue"]

[tool.mutmut]
paths_to_mutate = [
    # Broad first-party surface. Chunk mutation campaigns with CLI globs,
    # not by narrowing config down to a few hand-picked files.
    "polylogue",
]
do_not_mutate = [
    # Package markers and thin entrypoints add noise under mutation testing.
    "polylogue/**/__init__.py",
    "polylogue/**/__main__.py",
]
also_copy = ["polylogue", "README.md"]
# Mutmut runs inside one process; inheriting repo-wide `pytest -n auto`
# breaks trampoline bookkeeping inside xdist workers.
pytest_add_cli_args = ["-n", "0", "-p", "no:randomly", "-p", "no:random-order", "--benchmark-disable", "-m", "not benchmark"]
