[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polylogue"
version = "0.1.0"
description = "Polylogue CLI for AI chat archives"
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "chatgpt", "claude", "session", "archive", "llm"]
authors = [{ name = "Sinity" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
  "google-auth-oauthlib",
  "google-api-python-client",
  "google-auth-httplib2",
  "httpx[http2]>=0.28.1,<1.0",
  "rich>=15.0.0",
  "textual>=8.2.6",
  "jinja2",
  "markdown-it-py",
  "pygments>=2.20",
  "ijson",
  "sqlite-vec>=0.1.9",  # Self-contained vector search
  "questionary>=2.0.0",
  "click>=8.4.0,<9.0",
  "tenacity>=8.0.0",
  "dateparser>=1.1.0",
  "orjson>=3.11.9",
  "structlog>=24.1.0",
  "pydantic>=2.13.4,<3.0",
  "aiosqlite>=0.19.0",  # Async SQLite support
  "mcp>=1.27.1",  # Model Context Protocol SDK
  "pyyaml>=6.0",  # YAML output format
  "typing-extensions>=4.7",  # TypedDict that pydantic accepts on Py<3.12
  "watchfiles>=1.2.0",  # Rust-backed filesystem watcher for live ingestion
  "nh3>=0.2.18",  # Rust-backed HTML sanitizer (ammonia bindings) for defense-in-depth
  "opentelemetry-proto>=1.20.0",  # OTLP protobuf stubs for /v1/traces|metrics|logs receiver (#1321)
  # Transitive constraints to avoid known CVEs surfaced by pip-audit:
  "cryptography>=48.0.0",  # CVE-2026-39892 (transitive via google-auth)
  "python-multipart>=0.0.29",  # CVE-2026-40347 (transitive via mcp)
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",  # CVE-2025-71176
  "pytest-cov>=4",
  "pytest-asyncio>=1.4.0",  # Async test support
  "pytest-xdist>=3.5.0",  # Parallel test execution
  "pytest-randomly>=4.1.0",  # Detect order-dependent tests; adds --randomly-seed
  "pytest-testmon>=2.1.3",  # Per-test affected selection via dependency database
  "pytest-json-report>=1.5.0",  # Structured JSON report for verify pipeline + dashboard (#1026, #998)
  "pytest-benchmark>=5.0",  # Microbenchmark suite (run with --benchmark-enable -p no:xdist)
  "coverage[toml]>=7.14.0",
  "hypothesis>=6.152.8",
  "hypothesis-jsonschema>=0.23.0",  # Generate test data from JSON schemas
  "genson>=1.2.0",  # Infer JSON schemas from samples
  "jsonschema>=4.0.0",  # Validate JSON against schemas
  "syrupy>=4.0",  # Snapshot testing — pytest plugin, .ambr files
  "pyte>=0.8.0",  # Terminal emulator for deterministic output snapshot tests
  "mutmut>=3.0.0",  # Mutation testing for coverage verification
  "mypy>=1.17,<1.21",
  "types-dateparser>=1.2.0",  # dateparser library stubs for mypy
  "types-PyYAML>=6.0",  # yaml library stubs for mypy
  "ruff>=0.15.13",
  "pre-commit>=4.6.0",
  "pip-audit>=2.7",  # OSV-backed CVE scanning over the locked dev environment
]
fuzz = [
  "atheris>=2.3.0",  # Google's Python fuzzer
  "mutmut>=3.0.0",  # Mutation testing
]
tree-sitter = [
  "tree-sitter>=0.22.0",
  "tree-sitter-python>=0.21.0",
  "tree-sitter-javascript>=0.21.0",
  "tree-sitter-typescript>=0.21.0",
  "tree-sitter-rust>=0.21.0",
  "tree-sitter-go>=0.21.0",
  "tree-sitter-java>=0.21.0",
  "tree-sitter-c>=0.24.2",
  "tree-sitter-cpp>=0.22.0",
  "tree-sitter-bash>=0.21.0",
  "tree-sitter-html>=0.21.0",
  "tree-sitter-css>=0.21.0",
  "tree-sitter-json>=0.21.0",
  "tree-sitter-yaml>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/sinity/polylogue"
Repository = "https://github.com/sinity/polylogue"
Issues = "https://github.com/sinity/polylogue/issues"
Documentation = "https://github.com/sinity/polylogue#readme"

[project.scripts]
polylogue = "polylogue.cli:main"
plg = "polylogue.cli:main"
plog = "polylogue.cli:main"
polylogued = "polylogue.daemon.cli:main"
polylogue-mcp = "polylogue.mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["polylogue"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
addopts = "-rfE --tb=line --benchmark-disable --benchmark-storage=file://./.cache/pytest-benchmark"
testpaths = ["tests"]
asyncio_mode = "auto"
xfail_strict = true
cache_dir = ".cache/pytest"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (pipeline, CLI end-to-end)",
    "benchmark: marks benchmark tests (run with --benchmark-enable -p no:xdist -p no:randomly)",
    "contract: marks public contract tests that may emit bounded evidence artifacts",
    "scale(level): parametric scale marker (small/medium/large/stretch)",
    "scale_small: small-tier scale fixture (~100 convs / ~1k msgs); default verify gate (#1183)",
    "scale_medium: medium-tier scale fixture (~1k convs / ~10k msgs); devtools verify --lab gate (#1183)",
    "scale_large: large-tier scale fixture (~10k convs / ~100k msgs); nightly CI / explicit campaigns only (#1183)",
    "machine_contract: marks root CLI JSON success/failure contract tests",
    "query_routing: marks query-first CLI routing and read-surface tests",
    "proof_law: marks proof-catalog completeness, anti-dead-code, and evidence-quality laws",
    "tui: marks Textual dashboard interaction tests",
    "chaos: marks ingestion hostility, interruption, and chronology tests",
    "live: marks operator-run live archive validation lanes",
    "xdist_group(group_name): distribute parametrized tests within a file across workers (#1026)",
    "load_sensitive: wall-clock-bound tests (timing budgets, loopback sockets) routed into the isolated single-process lane of `devtools verify --all` so xdist worker contention cannot flake them (#1775)",
]
filterwarnings = [
    "ignore::DeprecationWarning:dateparser",  # dateparser strptime deprecation (external)
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",  # aiosqlite cleanup in xdist workers
]


[tool.coverage.run]
source = ["polylogue"]
branch = true
data_file = ".cache/coverage/.coverage"

[tool.coverage.report]
skip_empty = true
show_missing = true
# Temporary baseline reset for the #1743 split-file archive migration. The
# migration added ~15K lines of new storage/daemon runtime and deleted the old
# single-file paths; full-suite coverage is 83% (line 86.3% / branch 73.0%),
# down from the historical 90% floor. master was already at 83% mid-migration.
# 82 carries a ~1-point anti-flake margin across the three CI Python versions.
# Ratchet back to 90 is tracked in #1793 (starts by deleting the dead
# RepositoryWriteMixin user-state duplicates superseded by ArchiveStore).
fail_under = 82

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
cache_dir = ".cache/mypy"
plugins = []
files = [
  "polylogue",
  "tests/**/*.py",
  "devtools/**/*.py",
]
ignore_missing_imports = true
disallow_subclassing_any = false  # Pydantic BaseModel seen as Any (plugin incompatible with nix mypy 1.17)
disallow_untyped_decorators = false  # Click decorators are inherently untyped
# Tighten suppression discipline so the verify-suppressions scanner is a
# backstop, not the primary enforcement mechanism (#1062 Pack B).
enable_error_code = [
    "ignore-without-code",       # forbid bare `# type: ignore`; require `[error-code]`
    "redundant-self",            # flag unnecessary explicit Self annotations
    "redundant-expr",            # flag always-true / always-false subexpressions
    "possibly-undefined",        # flag names only defined on some branches
    "truthy-bool",               # flag implicit-truthy use of non-bool types
    "truthy-iterable",           # flag implicit-truthy use of iterables
    "unused-awaitable",          # flag awaitables that are constructed but not awaited
]

[tool.ruff]
line-length = 120
target-version = "py310"
cache-dir = ".cache/ruff"
# Excludes are limited to vendored/build directories; every path below is
# repository infrastructure, not production code. Audited under #1062 Pack B.
exclude = [
    ".git",         # version control metadata
    "__pycache__",  # bytecode caches
    "build",        # setuptools build output
    "dist",         # wheel/sdist artifacts
    ".venv",        # devshell-managed virtual environment
    "venv",         # legacy virtual environment fallback
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF100", # unused noqa directives
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# Per-file ignores are documented justifications, not blanket exemptions.
# Each entry carries the reason inline so the next reader can re-validate
# whether the suppression is still load-bearing. Audited under #1062 Pack B.
"tests/**" = [
    "E402",   # consolidated mega-files have mid-file section imports
    "N803",   # test parameter naming follows test conventions
    "N806",   # type alias naming in test helpers
    "SIM105", # try-except-pass in test error handling is intentional
    "SIM115", # NamedTemporaryFile(delete=False) pattern in benchmarks
    "SIM117", # nested with-statements with comments between context managers
]
"polylogue/sources/providers/**" = ["N815"]  # Pydantic alias fields match provider JSON schemas

[tool.ruff.lint.isort]
known-first-party = ["polylogue"]

[tool.mutmut]
paths_to_mutate = [
    # Broad first-party surface. Chunk mutation campaigns with CLI globs,
    # not by narrowing config down to a few hand-picked files.
    "polylogue",
]
do_not_mutate = [
    # Package markers and thin entrypoints add noise under mutation testing.
    "polylogue/**/__init__.py",
    "polylogue/**/__main__.py",
]
also_copy = ["polylogue", "README.md"]
# Mutmut runs inside one process; inheriting repo-wide `pytest -n auto`
# breaks trampoline bookkeeping inside xdist workers.
pytest_add_cli_args = ["-n", "0", "-p", "no:randomly", "-p", "no:random-order", "--benchmark-disable", "-m", "not benchmark"]
