[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polylogue-mcp"
version = "0.2.0"  # x-release-please-version
description = "MCP server entrypoint for the Polylogue AI chat archive"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ai", "mcp", "model-context-protocol", "polylogue", "archive"]
authors = [{ name = "Sinity" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
# Thin wrapper distribution: re-exports the polylogue-mcp console script from
# the main polylogue distribution. The version pin matches release-please's
# synchronized X.Y.Z bump across the polylogue, polylogue-mcp, and
# polylogue-hooks packages (#1309).
dependencies = [
  "polylogue==0.2.0",  # x-release-please-version
]

[project.urls]
Homepage = "https://github.com/sinity/polylogue"
Repository = "https://github.com/sinity/polylogue"
Issues = "https://github.com/sinity/polylogue/issues"
Documentation = "https://github.com/sinity/polylogue/blob/master/docs/architecture.md"

[project.scripts]
polylogue-mcp = "polylogue.mcp.cli:main"

[tool.hatch.build.targets.wheel]
# No package content of our own — this wrapper exists solely to publish the
# polylogue-mcp PyPI name with a pinned dependency on the main polylogue
# distribution. The console script target lives in polylogue.mcp.cli.
bypass-selection = true

[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "README.md"]
